# pyjinhx

./: .bumpversion.cfg  .gitignore  CHANGELOG.md  LICENSE.txt  README.md  main.py  mkdocs.yml  pyproject.toml
docs/: components.md  gallery.md  hooks.py  index.md  migration.md  reactivity.md  single-file-components.md
pyjinhx/: __init__.py  assets.py  base.py  cache.py  client.py  client_backend.py  config.py  context.py  dataclasses.py  dev.py  finder.py  importer.py  invalidation.py  keys.py  layout_validation.py  mutations.py  parser.py  props_header.py  reactive.py  reactive_dev.py  registry.py  renderer.py  root_attrs.py  sfc.py  stubgen.py  tags.py  utils.py
pyjinx/: base.py
scripts/: vendor_htmx.py  vendor_lucide_icons.py
tests/: 01_basic_component_rendering_test.py  02_edge_cases_test.py  03_nested_component_wrapper_test.py  04_nested_components_test.py  05_dict_field_components_test.py  06_list_field_components_test.py  07_mixed_collections_test.py  08_deep_nesting_test.py  09_extra_assets_test.py  10_javascript_collection_test.py  11_renderer_default_environment_test.py  12_project_root_detection_test.py  13_base_context_test.py  14_id_validation_test.py  14_registry_behavior_test.py  15_template_and_engine_errors_test.py  16_missing_assets_behavior_test.py  17_registry_behavior_test.py  18_class_registry_behavior_test.py  19_class_registry_test.py  20_html_tag_renderer_test.py  21_component_template_tag_expansion_test.py  22_jinja_template_auto_lookup_test.py  23_basecomponent_fallback_no_register_test.py  25_css_collection_test.py  26_classless_component_assets_test.py  27_autodiscovery_test.py  28_builtins_template_fallback_test.py  29_panel_key_validation_test.py  29_region_panel_key_validation_test.py  31_reactive_surface_test.py  32_reactive_stamping_test.py  33_client_runtime_test.py  34_layout_runtime_test.py  (+51 more)
(+872 files in other folders)
