[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyjinhx"
version = "0.32.1"
description = "UI components for Python using Pydantic and Jinja2 templates"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Paulo Mattos", email = "paulomtts@outlook.com"}
]
keywords = ["jinja2", "pydantic", "components", "templates", "", "ui"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "jinja2>=3.1.6",
    "markupsafe>=3.0.3",
    "pydantic>=2.12.5",
]

[project.urls]
Homepage = "https://github.com/paulomtts/pyjinhx"

[tool.pytest.ini_options]
markers = [
    "pjx_runtime: enable pjx.js auto-injection in tests (disabled by default via conftest)",
    "reactivity: browser-based tests for the builtin JS contracts (needs playwright chromium)",
    "no_request_scope: run the test outside the global reactive request scope (state still reset)",
]

[tool.pyright]
# `docs/` holds the mkdocs demo registry (`demos/`) and `hooks.py`, which the
# gallery tests add to sys.path at runtime. Put it on the type-checker's import
# roots so those imports resolve in the editor.
extraPaths = ["docs"]

[project.optional-dependencies]
redis = ["redis>=5.0.0", "fakeredis>=2.26.0"]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "mkdocs-material>=9.7.1",
    "mkdocstrings[python]>=1.0.1",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "uvicorn>=0.32.0",
    "python-multipart>=0.0.9",
    "fakeredis>=2.26.0",
    "redis>=5.0.0",
    "pytest-playwright>=0.8.0",
]
